; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress.gen.c_run_some_bytes_assign.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress.gen.c_run_some_bytes_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.run = type { i32, i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @run_some_bytes_assign(%struct.run* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.run*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.run* %0, %struct.run** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.run*, %struct.run** %5, align 8
  %9 = getelementptr inbounds %struct.run, %struct.run* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.run*, %struct.run** %5, align 8
  %14 = getelementptr inbounds %struct.run, %struct.run* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @free(i32* %15)
  br label %17

17:                                               ; preds = %12, %3
  %18 = load i32, i32* %7, align 4
  %19 = call i32* @malloc(i32 %18)
  %20 = load %struct.run*, %struct.run** %5, align 8
  %21 = getelementptr inbounds %struct.run, %struct.run* %20, i32 0, i32 1
  store i32* %19, i32** %21, align 8
  %22 = load %struct.run*, %struct.run** %5, align 8
  %23 = getelementptr inbounds %struct.run, %struct.run* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %17
  store i32 -1, i32* %4, align 4
  br label %39

27:                                               ; preds = %17
  %28 = load %struct.run*, %struct.run** %5, align 8
  %29 = getelementptr inbounds %struct.run, %struct.run* %28, i32 0, i32 0
  store i32 1, i32* %29, align 8
  %30 = load i32, i32* %7, align 4
  %31 = load %struct.run*, %struct.run** %5, align 8
  %32 = getelementptr inbounds %struct.run, %struct.run* %31, i32 0, i32 2
  store i32 %30, i32* %32, align 8
  %33 = load %struct.run*, %struct.run** %5, align 8
  %34 = getelementptr inbounds %struct.run, %struct.run* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @memcpy(i32* %35, i32* %36, i32 %37)
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %27, %26
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @free(i32*) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
